--- a/style.css
+++ b/style.css
@@ -67,3 +67,17 @@ p{
     font-size: 8px; 
     font-weight: bold; 
 }
+
+
+/* quantity-section */
+.cartqut input{
+    margin-top: 2px;
+    width:40px;
+    height: 30px;
+    padding: 0;
+    font-size: 15px;
+    text-align: center;
+    margin-inline: 2px;
+    border-radius: 5px;
+
+}
